[tool.poetry]
name = "falca"
version = "1.1.1"
description = "Falca is an intuitive REST APIs framework based on the falcon framework."
authors = ["aprilahijriyan <hijriyan23@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aprilahijriyan/falca"
repository = "https://github.com/aprilahijriyan/falca"
keywords = ["wsgi", "asgi", "framework", "rest api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[tool.poetry.dependencies]
python = "^3.7"
falcon = "^3.0.0"
Mako = "^1.1.4"
six = "^1.15.0"
typer = {extras = ["all"], version = "^0.3.2"}
rich = "^10.1.0"
requests-toolbelt = "^0.9.1"
ipython = "^7.23.1"
typing-inspect = "^0.6.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"
httpie = "^2.4.0"
pylint = "^2.8.2"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
marshmallow = "^3.12.1"
pydantic = "^1.8.2"

[tool.poetry.scripts]

falca = "falca.cli.app:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
